--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -206,7 +206,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="autoIndexTemplatePath" type="string">resources/templates/www/auto_index.phtml</param>
                     </params>
                     
-                    <!-- An example how to modify respone headers -->
+                    <!-- An example how to modify response headers -->
                     <!--
                     <headers>
                         <header type="response" name="Server" value="My Own Server" override="true"/>
