--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -197,7 +197,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="workerAcceptMin" type="integer"><?php echo Setup::getValue(SetupKeys::CONTAINER_SERVER_WORKER_ACCEPT_MIN) ?></param>
                         <param name="workerAcceptMax" type="integer"><?php echo Setup::getValue(SetupKeys::CONTAINER_SERVER_WORKER_ACCEPT_MAX) ?></param>
                         <param name="documentRoot" type="string">webapps</param>
-                        <param name="directoryIndex" type="string">index.do index.php index.html index.htm</param>
+                        <param name="directoryIndex" type="string">index.dhtml index.do index.php index.html index.htm</param>
                         <param name="keepAliveMax" type="integer">64</param>
                         <param name="keepAliveTimeout" type="integer">5</param>
                         <param name="autoIndex" type="boolean">false</param>
@@ -205,7 +205,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="welcomePageTemplatePath" type="string">resources/templates/www/welcome.phtml</param>
                         <param name="autoIndexTemplatePath" type="string">resources/templates/www/auto_index.phtml</param>
                     </params>
-                    
+
                     <!-- An example how to modify response headers -->
                     <!--
                     <headers>
@@ -347,7 +347,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="certPath" type="string">etc/appserver/server.pem</param>
                         <param name="passphrase" type="string"></param>
                         <param name="documentRoot" type="string">webapps</param>
-                        <param name="directoryIndex" type="string">index.do index.php index.html index.htm</param>
+                        <param name="directoryIndex" type="string">index.dhtml index.do index.php index.html index.htm</param>
                         <param name="keepAliveMax" type="integer">64</param>
                         <param name="keepAliveTimeout" type="integer">5</param>
                         <param name="autoIndex" type="boolean">false</param>
