--- a/_sass/bootstrap/_panels.scss
+++ b/_sass/bootstrap/_panels.scss
@@ -34,6 +34,7 @@
   margin-top: 0;
   margin-bottom: 0;
   font-size: ceil(($font-size-base * 1.125));
+  font-weight: bold;
   color: inherit;
 
   > a {
