Allow application configuration by default + Default virtual host now points to application servers root directory

--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -27,7 +27,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
         <param name="user" type="string"><?php echo Setup::getValue(SetupKeys::USER) ?></param>
         <param name="group" type="string"><?php echo Setup::getValue(SetupKeys::GROUP) ?></param>
         <param name="umask" type="string"><?php echo Setup::getValue(SetupKeys::UMASK) ?></param>
-        <param name="allowApplicationConfiguration" type="boolean">false</param>
+        <param name="allowApplicationConfiguration" type="boolean">true</param>
     </params>
 
     <!--
