removed bitname button

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-{% if page.title == 'Home'%}
+{% if page.title == 'disabled'%}
 <iframe class="bitnami-pinup" allowTransparency="true" frameborder="0" scrolling="no" src="https://bitnami.com/product/appserverio/widget" style="border:none;width:230px; height:100px;"></iframe>
 {% endif %}
 
