activated version 1.1 in documentation

--- a/_layouts/docs_1_0.html
+++ b/_layouts/docs_1_0.html
@@ -24,12 +24,10 @@
                               <span class="caret"></span>
                               <span class="sr-only">Toggle Dropdown</span>
                             </button>
-                            <!--
                             <ul class="dropdown-menu list-unstyled">
                               <li><a href="{{ page.url | replace:'/1.0','/1.1' }}">Version 1.1</a></li>
-                              <li><a href="{{ page.url | replace:'/1.0','/1.2' }}">Version 2.0</a></li>
+                              <!-- <li><a href="{{ page.url | replace:'/1.0','/1.2' }}">Version 2.0</a></li> -->
                             </ul>
-                            -->
                           </div>
                         </div>
                     </div>
