--- a/_layouts/docs_1_1.html
+++ b/_layouts/docs_1_1.html
@@ -26,7 +26,7 @@
                             </button>
                             <ul class="dropdown-menu list-unstyled">
                               <li><a href="{{ page.url | replace:'/1.1','/1.0' }}">Version 1.0</a></li>
-                              <li><a href="{{ page.url | replace:'/1.1','/2.0' }}">Version 2.0</a></li>
+                              <!-- <li><a href="{{ page.url | replace:'/1.1','/2.0' }}">Version 2.0</a></li> -->
                             </ul>
                           </div>
                         </div>
