--- a/_includes/widgets/slider.html
+++ b/_includes/widgets/slider.html
@@ -11,21 +11,32 @@
     </ol>
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
+
         {% for slide in page.slider %}
         {% if slide.title %}
         <div class="item {% if forloop.first %}active{% endif %}">
             <div class="fill" style="background-image: url('{{ slide.img | prepend: site.baseurl }}');opacity:.75;"></div>
             <div class="carousel-caption">
-                <h1>{{ slide.title }}</h1>
-                {% if slide.countdown %} {% include widgets/countdown.html %} {% endif %}
-                {% if slide.text %}{{ slide.text }}<br>{% endif %}
-                {% if slide.link-label %}<a href="{{ slide.link-href | prepend: site.baseurl }}" class="btn btn-lg btn-info-highlight"><i class="fa fa-download fa-lg"></i>&nbsp;&nbsp;{{ slide.link-label }}</a>{% endif %}
-                <br/><br/>
-                <p class="carousel-info">Version {{ site.appserver_version }}</p>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <img class="img-responsive img-hover" src="https://raw.githubusercontent.com/zelgerj/appserver-io-apps.welcome-page/master/logo_iron-knight_darwin_x86_64.png">
+                        </div>
+                        <div class="col-md-9">
+                            <h1>{{ slide.title }}</h1>
+                            {% if slide.countdown %} {% include widgets/countdown.html %} {% endif %}
+                            {% if slide.text %}{{ slide.text }}<br>{% endif %}
+                            {% if slide.link-label %}<a href="{{ slide.link-href | prepend: site.baseurl }}" class="btn btn-lg btn-info-highlight"><i class="fa fa-download fa-lg"></i>&nbsp;&nbsp;{{ slide.link-label }}</a>{% endif %}
+                            <br/><br/>
+                            <p class="carousel-info">Version {{ site.appserver_version }}</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         {% endif %}
         {% endfor %}
+
     </div>
     <!-- Controls -->
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
