--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -125,7 +125,7 @@ div.content {
 div.carousel {
   height: 400px;
   z-index: 300;
-  background: linear-gradient(45deg,#a4f0ff 0,#119fbc 100%);
+  background: linear-gradient(45deg,#26afd7 0,#000000 100%);
   -webkit-box-shadow: 0 2px 2px rgba(0,0,0,0.03);
   -moz-box-shadow: 0 2px 2px rgba(0,0,0,0.03);
   box-shadow: 0 2px 2px rgba(0,0,0,0.03);
