--- a/_includes/widgets/slider.html
+++ b/_includes/widgets/slider.html
@@ -25,7 +25,7 @@
                         <h1>{{ slide.title }}</h1>
                         {% if slide.countdown %} {% include widgets/countdown.html %} {% endif %}
                         {% if slide.link-label %}<a href="{{ slide.link-href | prepend: site.baseurl }}" class="btn btn-lg btn-info-highlight"><i class="fa fa-download fa-lg"></i>&nbsp;&nbsp;{{ slide.link-label }} Version {{ site.appserver_version }}</a>{% endif %}
-                        <a href="{{ slide.link-href | prepend: site.baseurl }}" class="btn btn-lg btn-info-highlight"><i class="fa fa-info fa-lg"></i>More details...</a>
+                        <a href="{{ slide.link-href | prepend: site.baseurl }}" class="btn btn-info-highlight"><i class="fa fa-file-text-o fa-lg"></i>&nbsp;&nbsp;More details...</a>
                         <br/><br/>
                         <p class="carousel-info"></p>
                     </div>
