--- a/_includes/widgets/slider.html
+++ b/_includes/widgets/slider.html
@@ -19,7 +19,7 @@
             <div class="carousel-caption">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="https://raw.githubusercontent.com/zelgerj/appserver-io-apps.welcome-page/master/logo_iron-knight_darwin_x86_64.png">
+                        <img src="https://raw.githubusercontent.com/appserver-io-apps/welcome-page/master/logo_iron-knight_debian_x86_64.png">
                     </div>
                     <div class="col-md-6">
                         <h1>{{ slide.title }}</h1>
