Allow location merging from container.xml

--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -90,7 +90,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="workerAcceptMin" type="integer">3</param>
                         <param name="workerAcceptMax" type="integer">8</param>
                         <param name="documentRoot" type="string">internal</param>
-                        <param name="directoryIndex" type="string">index.do</param>
+                        <param name="directoryIndex" type="string">index.do index.html</param>
                         <param name="keepAliveMax" type="integer">64</param>
                         <param name="keepAliveTimeout" type="integer">5</param>
                         <param name="errorsPageTemplatePath" type="string">resources/templates/www/error.phtml</param>
