--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -67,7 +67,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
 
             <deployment type="AppserverIo\Appserver\Core\GenericDeployment" />
 
-            <host name="internal" appBase="internal" />
+            <host name="internal" appBase="internal" deployBase="tmp" />
 
             <servers>
 
@@ -154,7 +154,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
 
             <deployment type="AppserverIo\Appserver\Core\GenericDeployment" />
 
-            <host name="localhost" appBase="webapps" />
+            <host name="localhost" appBase="webapps" deployBase="deploy" />
 
             <!--
              ! This is an example of how to configure upstream backends for proxy usage.
