--- a/_includes/widgets/slider.html
+++ b/_includes/widgets/slider.html
@@ -14,7 +14,7 @@
 
         {% for slide in page.slider %}
         <div class="item {% if forloop.first %}active{% endif %}">
-            <div class="fill" style="background-image: url('{{ slide.img | prepend: site.baseurl }}');opacity:.5;"></div>
+            <div class="fill" style="background-image: url('{{ slide.img | prepend: site.baseurl }}');opacity:{% if slide.img_opacity %}{{ slide.img_opacity }}{% endif %};"></div>
             {% if slide.title %}
             <div class="carousel-caption">
                 <div class="row">
