--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -138,6 +138,10 @@ div.carousel .fill {
   background-size: cover;
 }
 
+div.carousel video {
+  width: 100%;
+}
+
 div.carousel .item,
 div.carousel .item.active,
 div.carousel .carousel-inner {
