--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -119,6 +119,7 @@ div.content {
   }
 }
 
+.bs-example { overflow: auto; }
 .img-portfolio { margin-bottom: 30px; }
 .img-hover:hover { opacity: 0.8; }
 
