--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -156,6 +156,14 @@ div.carousel .carousel-inner {
   }
 }
 
+.slider-video {
+  top: 25%;
+  bottom: auto;
+  h1 {
+    font-size: 38px;
+  }
+}
+
 .carousel-caption {
   text-shadow: 0 0px 4px rgba(0, 0, 0, 0.45);
   h1 {
