--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -156,11 +156,11 @@ div.carousel .carousel-inner {
   }
 }
 
-.slider-video {
+.carousel-caption.slider-video {
   top: 25%;
   bottom: auto;
   h1 {
-    font-size: 38px;
+    font-size: 32px;
   }
 }
 
