Refactoring security subsystem

--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -77,7 +77,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         worker="\AppserverIo\Server\Workers\ThreadWorker"
                         socket="\AppserverIo\Server\Sockets\StreamSocket"
                         requestContext="\AppserverIo\Server\Contexts\RequestContext"
-                        serverContext="\AppserverIo\Server\Contexts\ServerContext"
+                        serverContext="\AppserverIo\Appserver\Server\Contexts\StandardServerContext"
                         streamContext="\AppserverIo\Server\Contexts\StreamContext"
                         loggerName="System">
 
@@ -209,7 +209,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         worker="\AppserverIo\Server\Workers\ThreadWorker"
                         socket="\AppserverIo\Server\Sockets\StreamSocket"
                         requestContext="\AppserverIo\Server\Contexts\RequestContext"
-                        serverContext="\AppserverIo\Server\Contexts\ServerContext"
+                        serverContext="\AppserverIo\Appserver\Server\Contexts\StandardServerContext"
                         streamContext="\AppserverIo\Server\Contexts\StreamContext"
                         loggerName="System">
 
@@ -273,7 +273,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         worker="\AppserverIo\Server\Workers\ThreadWorker"
                         socket="\AppserverIo\Server\Sockets\StreamSocket"
                         requestContext="\AppserverIo\Server\Contexts\RequestContext"
-                        serverContext="\AppserverIo\Server\Contexts\ServerContext"
+                        serverContext="\AppserverIo\Appserver\Server\Contexts\StandardServerContext"
                         streamContext="\AppserverIo\Server\Contexts\StreamContext"
                         loggerName="System">
                     <params>
@@ -421,7 +421,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         worker="\AppserverIo\Server\Workers\ThreadWorker"
                         socket="\AppserverIo\Server\Sockets\StreamSocket"
                         requestContext="\AppserverIo\Server\Contexts\RequestContext"
-                        serverContext="\AppserverIo\Server\Contexts\ServerContext"
+                        serverContext="\AppserverIo\Appserver\Server\Contexts\StandardServerContext"
                         streamContext="\AppserverIo\Server\Contexts\StreamContext"
                         loggerName="System">
                     <params>
