Add experimental blackfire.io support

--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -130,7 +130,9 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <module type="\AppserverIo\WebServer\Modules\HeaderModule"/>
                         <module type="\AppserverIo\WebServer\Modules\DeflateModule"/>
                         <!-- RESPONSE_POST hook -->
-                        <module type="\AppserverIo\Appserver\Core\Modules\ProfileModule"/>
+                        <!-- module type="\AppserverIo\Appserver\Core\Modules\ProfileModule"/ -->
+                        <!-- REQUEST_PRE/RESPONSE_POST hook -->
+                        <!-- module type="\AppserverIo\Appserver\Core\Modules\BlackfireModule"/ -->
                     </modules>
 
                     <fileHandlers>
@@ -258,7 +260,9 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <!-- RESPONSE_PRE hook -->
                         <module type="\AppserverIo\WebServer\Modules\DeflateModule"/>
                         <!-- RESPONSE_POST hook -->
-                        <module type="\AppserverIo\Appserver\Core\Modules\ProfileModule"/>
+                        <!-- module type="\AppserverIo\Appserver\Core\Modules\ProfileModule"/ -->
+                        <!-- REQUEST_PRE/RESPONSE_POST hook -->
+                        <!-- module type="\AppserverIo\Appserver\Core\Modules\BlackfireModule"/ -->
                     </modules>
 
                     <fileHandlers>
@@ -393,7 +397,9 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <module type="\AppserverIo\WebServer\Modules\HeaderModule"/>
                         <module type="\AppserverIo\WebServer\Modules\DeflateModule"/>
                         <!-- RESPONSE_POST hook -->
-                        <module type="\AppserverIo\Appserver\Core\Modules\ProfileModule"/>
+                        <!-- module type="\AppserverIo\Appserver\Core\Modules\ProfileModule"/ -->
+                        <!-- REQUEST_PRE/RESPONSE_POST hook -->
+                        <!-- module type="\AppserverIo\Appserver\Core\Modules\BlackfireModule"/ -->
                     </modules>
 
                     <fileHandlers>
@@ -522,7 +528,9 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <module type="\AppserverIo\WebServer\Modules\HeaderModule"/>
                         <module type="\AppserverIo\WebServer\Modules\DeflateModule"/>
                         <!-- RESPONSE_POST hook -->
-                        <module type="\AppserverIo\Appserver\Core\Modules\ProfileModule"/>
+                        <!-- module type="\AppserverIo\Appserver\Core\Modules\ProfileModule"/ -->
+                        <!-- REQUEST_PRE/RESPONSE_POST hook -->
+                        <!-- module type="\AppserverIo\Appserver\Core\Modules\BlackfireModule"/ -->
                     </modules>
 
                     <fileHandlers>
