--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -75,12 +75,12 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
     <containers>
 
         <container
-                name="api-container"
+                name="system-container"
                 type="AppserverIo\Appserver\Core\GenericContainer"
                 factory="AppserverIo\Appserver\Core\GenericContainerFactory">
 
             <description>
-                <![CDATA[This is the API containery]]>
+                <![CDATA[Container for appserver.io internal functionality]]>
             </description>
 
             <deployment type="AppserverIo\Appserver\Core\GenericDeployment" />
@@ -88,6 +88,42 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
             <host name="internal" appBase="internal" deployBase="var/deploy" tmpBase="var/tmp/internal" />
 
             <servers>
+
+                <server
+                    name="dns"
+                    type="\AppserverIo\Server\Servers\MultiThreadedServer"
+                    worker="\AppserverIo\DnsServer\Workers\UdpThreadWorker"
+                    socket="\AppserverIo\Server\Sockets\StreamSocket"
+                    streamContext="\AppserverIo\Server\Contexts\StreamContext"
+                    serverContext="\AppserverIo\Server\Contexts\ServerContext"
+                    requestContext="\AppserverIo\Server\Contexts\RequestContext"
+                    loggerName="System">
+
+                    <params>
+                        <param name="admin" type="string"><?php echo Setup::getValue(SetupKeys::ADMIN_EMAIL) ?></param>
+                        <param name="transport" type="string">udp</param>
+                        <param name="address" type="string">127.0.0.1</param>
+                        <param name="port" type="integer">53</param>
+                        <param name="flags" type="string">STREAM_SERVER_BIND</param>
+                        <param name="workerNumber" type="integer">4</param>
+                        <param name="workerAcceptMin" type="integer">3</param>
+                        <param name="workerAcceptMax" type="integer">8</param>
+                    </params>
+
+                    <connectionHandlers>
+                        <connectionHandler type="\AppserverIo\DnsServer\ConnectionHandlers\DnsConnectionHandler" />
+                    </connectionHandlers>
+
+                    <modules>
+                        <module type="\AppserverIo\DnsServer\Modules\CoreModule" >
+                            <params>
+                                <param name="resolverFactory" type="string">\AppserverIo\Appserver\Core\Modules\StorageProvider\SystemConfigurationResolverFactory</param>
+                                <param name="defaultTTL" type="integer">300</param>
+                            </params>
+                        </module>
+                    </modules>
+
+                </server>
 
                 <server
                         name="api"
@@ -100,7 +136,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         loggerName="System">
 
                     <params>
-                        <param name="admin" type="string">info@appserver.io</param>
+                        <param name="admin" type="string"><?php echo Setup::getValue(SetupKeys::ADMIN_EMAIL) ?></param>
                         <param name="transport" type="string">tcp</param>
                         <param name="address" type="string">127.0.0.1</param>
                         <param name="port" type="integer">9024</param>
