--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -49,22 +49,38 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
     </consoles>
 
     <!--
-     ! If you need more and detailed logging information, you can deactivate this. The logLevel attribute can be one
+     ! Customize this to fit your needs ragarding log information. The logLevel attribute can be one
      ! of https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-3-logger-interface.md#5-psrlogloglevel.
      -->
-    <!-- loggers>
+
+    <loggers>
         <logger channelName="system" name="System" type="\AppserverIo\Logger\Logger">
             <handlers>
                 <handler type="\AppserverIo\Logger\Handlers\CustomFileHandler">
                     <formatter type="\AppserverIo\Logger\Formatters\StandardFormatter"/>
                     <params>
                         <param name="logFile" type="string">var/log/appserver-errors.log</param>
-                        <param name="logLevel" type="string">debug</param>
-                   </params>
-               </handler>
-           </handlers>
+                        <param name="logLevel" type="string">info</param>
+                    </params>
+                </handler>
+            </handlers>
         </logger>
-   </loggers -->
+        <logger channelName="access" name="Access" type="\AppserverIo\Logger\Logger">
+            <handlers>
+                <handler type="\AppserverIo\Logger\Handlers\CustomFileHandler">
+                    <formatter type="\AppserverIo\Logger\Formatters\StandardFormatter">
+                        <params>
+                            <param name="format" type="string">%4$s</param>
+                        </params>
+                    </formatter>
+                    <params>
+                        <param name="logFile" type="string">var/log/appserver-access.log</param>
+                        <param name="logLevel" type="string">info</param>
+                    </params>
+                </handler>
+            </handlers>
+        </logger>
+    </loggers>
 
     <!--
      ! You might add optional configuration for implicitly configured components here.
