--- a/resources/templates/etc/appserver/appserver-runner.xml.phtml
+++ b/resources/templates/etc/appserver/appserver-runner.xml.phtml
@@ -262,8 +262,6 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="transport" type="string">ssl</param>
                         <param name="address" type="string"><?php echo Setup::getValue(SetupKeys::CONTAINER_HTTPS_HOST) ?></param>
                         <param name="port" type="integer"><?php echo Setup::getValue(SetupKeys::CONTAINER_HTTPS_PORT) ?></param>
-                        <param name="certPath" type="string">etc/appserver/server.pem</param>
-                        <param name="passphrase" type="string"></param>
                         <param name="documentRoot" type="string">webapps</param>
                         <param name="directoryIndex" type="string">index.dhtml index.do index.php index.html index.htm</param>
                         <param name="keepAliveMax" type="integer">64</param>
@@ -272,6 +270,20 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="errorsPageTemplatePath" type="string">resources/templates/www/error.phtml</param>
                         <param name="welcomePageTemplatePath" type="string">resources/templates/www/welcome.phtml</param>
                         <param name="autoIndexTemplatePath" type="string">resources/templates/www/auto_index.phtml</param>
+                        <param name="certPath" type="string">etc/appserver/server.pem</param>
+                        <param name="privateKeyPath" type="string"></param>
+                        <param name="dhParamPath" type="string"></param>
+                        <param name="passphrase" type="string"></param>
+                        <param name="cryptoMethod" type="string">STREAM_CRYPTO_METHOD_TLSv1_0_SERVER | STREAM_CRYPTO_METHOD_TLSv1_1_SERVER | STREAM_CRYPTO_METHOD_TLSv1_2_SERVER</param>
+                        <param name="peerName" type="string"></param>
+                        <param name="verifyPeer" type="boolean">false</param>
+                        <param name="verifyPeerName" type="boolean">false</param>
+                        <param name="allowSelfSigned" type="boolean">true</param>
+                        <param name="disableCompression" type="boolean">true</param>
+                        <param name="honorCipherOrder" type="boolean">true</param>
+                        <param name="ecdhCurve" type="string">secp384r1</param>
+                        <param name="singleEcdhUse" type="boolean">true</param>
+                        <param name="singleDhUse" type="boolean">true</param>
                     </params>
 
                     <environmentVariables>
