Switch to default port 9053 for DNS server + Add Strict-Transport-Security header to enable HTTPS Strict Transport Security (HSTS)

--- a/resources/templates/etc/appserver/appserver-runner.xml.phtml
+++ b/resources/templates/etc/appserver/appserver-runner.xml.phtml
@@ -286,6 +286,11 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="singleDhUse" type="boolean">true</param>
                     </params>
 
+                    <!-- By default, we want to send additional response headers to improve HTTPS security -->
+                    <headers>
+                        <header type="response" name="Strict-Transport-Security" value="max-age=31536000; includeSubDomains; preload" />
+                    </headers>
+
                     <environmentVariables>
                         <environmentVariable condition="" definition="LOGGER_ACCESS=Access" />
                     </environmentVariables>
