Fixed endless loop in \AppserverIo\Appserver\ServletEngine\Http\Request when no filehandler has been registered to handle DHTML template

--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -204,6 +204,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                     </modules>
 
                     <fileHandlers>
+                        <fileHandler name="servlet" extension=".dhtml" />
                         <fileHandler name="servlet" extension=".do" />
                     </fileHandlers>
 
